# music-analyser

./: CMakeLists.txt  circle.yml  platformio.ini
lib/MSGEQ7/examples/MSGEQ7_LED/: MSGEQ7_LED.ino
src/: main.cpp  main.ino
